<?xml version="1.0"?>
<package>
  <name>gencpp</name>
  <version>0.4.2</version>
  <description>C++ ROS message and service generators.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/gencpp</url>
  <url type="bugtracker">https://github.com/ros/gencpp/issues</url>
  <url type="repository">https://github.com/ros/gencpp</url>

  <author>Josh Faust</author>
  <author>Troy Straszheim</author>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>cpp</message_generator>
    <rosdoc config="rosdoc.yaml"/>    
  </export>
</package>
