<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gencpp</name>
  <version>0.6.5</version>
  <description>C++ ROS message and service generators.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros/gencpp/issues</url>
  <url type="repository">https://github.com/ros/gencpp</url>

  <author>Josh Faust</author>
  <author>Troy Straszheim</author>
  <author>Morgen Kjaergaard</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <exec_depend>genmsg</exec_depend>

  <export>
    <message_generator>cpp</message_generator>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
